Fixed problem with different field names and swagger was updated. Moreover fixed bugs with id query in user handler"
